FIX: Improve game menu styling on smaller window size.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     display: none !important;
 }
 
+.noVisibility {
+    visibility: hidden;
+}
+
 .value {
     font-style: italic;
     color: rgb(27, 16, 175);
@@ -87,12 +91,8 @@ body {
     align-items: center;
 }
 
-#GameMenu-TowerStats {
-    min-width: 150px;
-}
-
 .MenuBlock {
-    min-width: 150px;
+    min-width: 120px;
     margin: 0 10px;
 }
 
@@ -159,4 +159,15 @@ body {
     font-size: 20px;
     text-align: center;
     background-color: rgb(250, 250, 250);
+}
+
+@media only screen and (max-width: 1200px) {
+    .label {
+        display: none;
+    }
+
+    .button,
+    .MenuBlock {
+        min-width: 110px;
+    }
 }
